test_ingress_tutorial/apple.yaml
kind: Pod
apiVersion: v1
metadata:
    name: apple-app
    labels:
        app: apple
spec:
    containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
    name: apple-service
spec:
    type: NodePort
    selector:
        app: apple
    ports:
        - port: 5678
