test_ingress_tutorial/nginx_2.yaml
kind: Pod
apiVersion: v1
metadata:
    name: simple-app
    labels:
        app: nginx
spec:
    containers:
        - name: nginx-app
          image: nginx
          ports:
          - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
    name: nginx-service
spec:
    type: NodePort
    selector:
        app: nginx
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
